--- a/css/style.css
+++ b/css/style.css
@@ -49,17 +49,7 @@ body {
 }
 
 
-.ba-t {
-	font-family: "Playfair Display", serif;
-	color:  #171717;
-	font-size: 100px;
-	font-weight: 400;
-	line-height: 34px;
-	text-align: left;
-	float: left;
-}
-
-article a:first-of-type:first-letter {
+article p:first-of-type:first-letter {
 	font-family: "Playfair Display", Arial, serif;
 	float: left;
 	font-size: 110px;
