--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ html, body {
 html {
 	height: 100%;
 	width: 1600px;
-	height: 1200px;
 }
 
 body {
@@ -22,13 +21,11 @@ body {
 .ba-container {
 	background-color:  #ffffff;
 	box-shadow: 0px 4px 68px 0px rgba(0, 0, 0, 0.1);
-	margin: 100px 130px;
-	width: 1400px;
-	height: 940px;
+	margin: 0 auto;
 }
 
 .ba-title {
-	font-family: "Playfair Display", serif;
+	font-family: "Playfair Display", sans-serif;
 	color:  #171717;
 	font-size: 42px;
 	font-weight: 400;
@@ -69,6 +66,7 @@ article p:first-of-type:first-letter {
 .ba-quote {
 	font-style: italic;
 	font-size: 24px;
+	margin: 0 0;
 }
 
 .ba-discover {
@@ -79,9 +77,8 @@ article p:first-of-type:first-letter {
 	line-height: 34px;
 	text-align: center;
 	border: 2px solid #eaa258;
-	width: 260px;
-	height: 64px;
 	background: #FFF;
 	cursor: pointer;
+
 }
 
